# SomeRustProjects2

./: README.md
_1_HandlingError_wOption_wResult/d1_filework/: Cargo.toml
_1_HandlingError_wOption_wResult/d1_filework/src/: error.rs  lib.rs  main.rs
_1_HandlingError_wOption_wResult/d1_filework/test_data/: transactions.json
_2_Working_wIterators/d2_iterators/src/: combi.rs  gen_range.rs  into.rs  lib.rs  main.rs
_3_Concurrency_Lifetimes/d3_lifetimes/: Cargo.toml
_3_Concurrency_Lifetimes/d3_lifetimes/src/: main.rs  v2_closure.rs  v3_rc.rs  v4_channels.rs  v5_pool.rs  v6_rayon.rs
_3_Concurrency_Lifetimes/d3_lifetimes/test_data/: v3_data.txt
_4_CreatingSimplePattern_wSVG/d4_builder/: Cargo.toml
_4_CreatingSimplePattern_wSVG/d4_builder/src/: card.rs  lib.rs  svg_mac.rs
_4_CreatingSimplePattern_wSVG/d4_builder_derive/: Cargo.toml
_4_CreatingSimplePattern_wSVG/d4_builder_derive/src/: lib.rs
_5_Futures_wAsync_Await/d5_futures/: Cargo.toml
_5_Futures_wAsync_Await/d5_futures/src/: lib.rs  main.rs  simple.rs
_6_BuildDatabases_wDiesel/: SQL Shell (psql).lnk  pgAdmin 4.lnk
_6_BuildDatabases_wDiesel/d6_doodle/: .env  Cargo.toml
_6_BuildDatabases_wDiesel/d6_doodle/migrations/2023-10-11-034957_create_initial_tables/: down.sql  up.sql
_6_BuildDatabases_wDiesel/d6_doodle/migrations/2023-10-11-042926_add_owner_to_poll/: up.sql
_6_BuildDatabases_wDiesel/d6_doodle/src/: cli_main.rs  lib.rs  models.rs  schema.rs
_7_BuildWebServersWithRocket/d7_rocket/: Cargo.toml  Rocket.toml
_7_BuildWebServersWithRocket/d7_rocket/site/static/: index.html
_7_BuildWebServersWithRocket/d7_rocket/src/: error.rs  main.rs  session.rs
_8_IntegratingOurCodewithOtherLanguagesCode/cfromr/: Cargo.toml  build.rs
_8_IntegratingOurCodewithOtherLanguagesCode/cfromr/libbadmath/: badmath.c
_8_IntegratingOurCodewithOtherLanguagesCode/dyn_c_lib/: wibble.c
_8_IntegratingOurCodewithOtherLanguagesCode/dyn_load/: Cargo.toml
_8_IntegratingOurCodewithOtherLanguagesCode/rfromc/: Cargo.toml  Makefile
(+6 files in other folders)
