[package]
name = "d5_futures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "d5_futures"
path = "src/lib.rs"

[[bin]]
name = "d5_server"
path = "src/main.rs"

[dependencies]
futures-preview = {version= "0.3.0-alpha.16", features=["compat","io-compat"]}
tokio="0.1.21"
failure = "0.1.5"