[package]
name = "d6_doodle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "d6_doodle" 
path = "src/lib.rs"

[[bin]]
name = "doodle_cli"
path = "src/cli_main.rs"

[dependencies]
diesel = {version="1.4.2",features=["postgres"]}
dotenv = "0.14.1"
failure = "0.1.5"
failure_derive = "0.1.5"
clap = "2.33.0"
bcrypt = "0.15.0"
blowfish = "0.9.1"